--- a/index.html
+++ b/index.html
@@ -4,12 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <style>
+        *{
+            margin: 0px;
+            padding: 0px;
+            font-family: Arial;
+        }
+
+        main{
+            width: 100vw;
+            height: 100vh;
+            background-color: rgb(240, 240, 240);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .container{
+            background-color: white;
+            width: 300px;
+            height: auto;
+            padding: 20px 20px;
+            border-radius: 5px;
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            -webkit-box-shadow: 0px 0px 26px -8px rgba(0,0,0,0.75);
+            -moz-box-shadow: 0px 0px 26px -8px rgba(0,0,0,0.75);
+            box-shadow: 0px 0px 26px -8px rgba(0,0,0,0.75);
+        }
+
+        .links{
+            color: black;
+            font-size: 25px;
+            text-decoration: none;
+            margin: 10px 0px;
+        }
+
+        .links:hover{
+            font-size: 26px;
+            /* text-decoration: underline; */
+            margin: 15px 0px;
+        }
+    </style>
 </head>
 <body>
-    <a href="cadastro/">Cadastrar</a>
-    <br><br>
-    <a href="relatorio/">Relatório</a>
-    <br><br>
-    <a href="#">Sair</a>
+    <main>
+        <div class="container">
+            <a href="cadastro/" class="links">Cadastrar</a>
+            
+            <a href="relatorio/" class="links">Relatório</a>
+            
+            <a href="#" class="links">Sair</a>  
+        </div>
+    </main>    
 </body>
 </html>
